--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cognitive Commerce : World of Possiblities"
     />
-    <link rel="manifest" href="./manifest.json" />
-    <title>React App</title>
+    <!-- <link rel="manifest" href="./manifest.json" /> -->
+    <title>Cognitive Comerce</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
